# tsyne

./: .CI_TEST_RESULTS_SUMMARY.txt  .gitignore  .npmignore  .prettierignore  3d_clock_detailed_plan.md  ACCESSIBILITY.md  ARCHITECTURE.md  BROWSER_TESTING.md  BUTTON_CONVERSION_REPORT.md  BUTTON_CONVERSION_SUMMARY.txt  Browser_TODO.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONVERSION_EXAMPLES.md  D3_P5_EXPANSION_SUMMARY.md  DESIGNER_TODO.md  EFFECTS_GRADIENTS_CLIPPING_SUMMARY.md  EXPERIMENTS.md  FINAL_SUMMARY.md  HISTORICAL.md  INSPECTOR_DESIGN.md  LINE_MARKERS_SUMMARY.md  LLM.md  MISSING_FEATURES.md  PATTERNS.md  PERF_DIAGNOSTICS.md  PHASE5_IMPLEMENTATION_SUMMARY.md  PROS_AND_CONS.md  PUBLISHING.md  QUICKSTART.md  README.md  ROADMAP.md  SCREENSHOTS.md  STREAMING_CONTENT.md  SUGGESTED_APPS.md  TESTING.md  TESTING_CHECKLIST.md  TESTING_STRUCTURE.md  TEST_FAILURES.md  (+33 more)
.buildkite/: pipeline.yml
android-native/: .gitignore  build-3dcube-apk.sh  gradle.properties  settings.gradle
android-native/app/src/main/cpp/: CMakeLists.txt  jni-wrapper.c  node-runner.cpp
blog/: accessibility-comparison.md
bridge/: Makefile  containers.go  dialogs.go  double_tappable_container.go  drag_drop.go  draggable_container.go  fix.txt  fory_server.go  go.mod  go.sum  grpc_server.go  grpc_server_canvas.go  grpc_server_containers.go  grpc_server_data.go  grpc_server_inputs.go  grpc_server_operations.go  grpc_server_state.go  grpc_server_widgets_basic.go  inspector.go  interactions.go  main.go  misc.go  msgpack_server.go  platform.go  resources.go  scalable_theme.go  sync_handlers.go  (+13 more)
(+1901 files in other folders)
